Fix charts when service is selected. Change expand/collapse ui interaction

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  overflow-x: hidden;
+}
+
 #root {
   height: 100vh;
 }
